Done with stage one

--- a/contact.html
+++ b/contact.html
@@ -95,11 +95,11 @@
           class="success"
           hidden
         >
-          ✅ Message sent successfully!
+          Message sent successfully!
         </p>
       </form>
     </main>
 
-    <script src="script.js"></script>
+    <script src="validate.js"></script>
   </body>
 </html>
