--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
         <section data-testid="test-about-extra">
           <h2>Extra Thoughts</h2>
           <p>
-            Joining Frontend Wizards has been transformative — every task pushes
-            me to grow faster.
+            Joining the HNG internship has been transformative — every task
+            pushes me to grow faster.
           </p>
         </section>
       </article>
